HelloUltraviolet/Fixtures/RejectedSource/FFI/BoundaryUnwindingDiagnosticOwnership/Source/Main.uv
//! Rejected FFI specimen for boundary-unwinding diagnostic ownership.

#unwind("catch")
public procedure unwindOnOrdinaryProcedure() -> i32 {
    return 0
}
